Added terminal support and all that.

--- a/changelog.html
+++ b/changelog.html
@@ -36,6 +36,20 @@
 		of the thing would be in order?</li>
 </ul>
 
+<h2>0.9.1, NORELDATE</h2>
+
+<ul>
+	<li>Combat fix from Josh Triplett</li>
+	<li>Command-line options added</li>
+</ul>
+
+<h3>Features remaining unimplemented</h3>
+
+<ul>
+	<li>Combat feature: Elemental types affecting the outcome.</li>
+	<li>Curses-based display as an option.</li>
+	<li>Use of healing potions.</li>
+</ul>
 
 <hr />
 <p id="scm">$Id$</p>
