made the combat use the new terminal thing. And other small tweaks.

--- a/changelog.html
+++ b/changelog.html
@@ -41,13 +41,13 @@
 <ul>
 	<li>Combat fix from Josh Triplett</li>
 	<li>Command-line options added</li>
+	<li>Curses/terminfo-based display control (colors, bold, line-kill)</li>
 </ul>
 
 <h3>Features remaining unimplemented</h3>
 
 <ul>
 	<li>Combat feature: Elemental types affecting the outcome.</li>
-	<li>Curses-based display as an option.</li>
 	<li>Use of healing potions.</li>
 </ul>
 
