Fixed the output issue in the selling (was reporting negative prices, I think that was just not paying attention to the actual amount of money transferred at each step).
Added GPL stuff to all of the files.

--- a/changelog.html
+++ b/changelog.html
@@ -36,15 +36,19 @@
 		of the thing would be in order?</li>
 </ul>
 
-<h2>0.9.1, NORELDATE</h2>
+<h2>0.9.1, 2005-10-27</h2>
 
 <ul>
 	<li>Combat fix from Josh Triplett</li>
-	<li>Command-line options added</li>
-	<li>Curses/terminfo-based display control (colors, bold, line-kill)</li>
+	<li>Command-line option parsing added</li>
+	<li>Rudimentary curses/terminfo-based display control (colors, bold, line-kill)</li>
+	<li>Fixed the item-selling decimal and negative-sale-price bug
+		(I <em>think</em> it was just a reporting error.)</li>
 </ul>
 
-<h3>Features remaining unimplemented</h3>
+<h2>Features remaining unimplemented before 1.0</h2>
+
+<p>(Or, sort of a to-do list, but not quite)</p>
 
 <ul>
 	<li>Combat feature: Elemental types affecting the outcome.</li>
