--- a/guide.html
+++ b/guide.html
@@ -10,7 +10,8 @@
 		}
 		#copyright {
 			font-size: smaller;
-			text-align: right;
+			margin-left: 2em;
+			margin-right: 2em;
 		}
 		#scm {
 			font-size: smaller;
@@ -23,9 +24,26 @@
 
 <h1>Miller's Quest! &ndash; Player's Guide</h1>
 
-<p id="copyright">Copyright &copy; 2005 Urpo 'WWWWolf' Lankinen.</p>
+
+<div id="copyright">
+
+<p><strong>Miller's Quest!</strong>, a role-playing game simulator.<br/>
+Copyright &copy; 2005  Urpo 'WWWWolf' Lankinen.</p>
+
+<p>This program is free software; you can redistribute it and/or modify
+it under the terms of <a href="GPL.txt">the GNU General Public License</a>
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.</p>
+
+<p>
+Contact: &lt;<a href="mailto:wwwwolf@iki.fi">wwwwolf@iki.fi</a>&gt;<br/>
+Web site: &lt;URL:<a href="http://www.iki.fi/wwwwolf/">http://www.iki.fi/wwwwolf/</a>&gt;<br/>
+Miller's Quest official website:
+&lt;URL:<a href="http://www.iki.fi/wwwwolf/games/millerquest/">http://www.iki.fi/wwwwolf/games/millerquest/</a>&gt;</p>
 
 <p>For version history, see the <a href="changelog.html">changelog</a>.</p>
+
+</div>
 
 <h2>Story</h2>
 
@@ -91,6 +109,12 @@ sub-10 stats to 10.</p>
 nicely, hit Ctrl+C, and the game is automatically saved in this
 situation too. (Game crashes due to bug, and any heavier than Ctrl-C
 close-down tools, will lead to the game not being saved.)</p>
+
+<h3>Things to note</h3>
+
+<p>I'm not going to guarantee that the characters stay completely compatible
+(or balanced) through upgrades. So, when upgrading the game, I suggest
+starting over a completely new game.</p>
 
 <h2>Hacking</h2>
 
