--- a/changelog.html
+++ b/changelog.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<h1>Miller's Quest! &ndash; History</h1>
+<h1>Miller's Quest! &ndash; History and to-do list</h1>
 
 <h2>0.9, 2005-10-09</h2>
 
@@ -53,6 +53,9 @@
 <ul>
 	<li>Combat feature: Elemental types affecting the outcome.</li>
 	<li>Use of healing potions.</li>
+	<li>Character classes should give some benefits to the character.</li>
+	<li>Colors should work on terminals with black background</li>
+	<li>More monsters.</li>
 </ul>
 
 <hr />
