--- a/guide.html
+++ b/guide.html
@@ -48,7 +48,7 @@ Miller's Quest official website:
 <h2>Story</h2>
 
 <p>You are an ordinary miller, from a good well-doing family with
-centuries of farmin experience. All your life, you have dreamed of
+centuries of farming experience. All your life, you have dreamed of
 nothing but keeping your farm prosperous, and your mill grinding.</p>
 
 <p>But last night, you had this terrifying premonition in your dream.
